--- a/Notre Site/site_officiel/templates/result.html
+++ b/Notre Site/site_officiel/templates/result.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     
-<title>page 1</title>
-<link rel="stylesheet" href="css_1_.css">
+<title>Avis</title>
+<link rel="stylesheet">
 
 </head>
 
