--- a/Notre Site/site_officiel/templates/result.html
+++ b/Notre Site/site_officiel/templates/result.html
@@ -2,35 +2,231 @@
 <html>
 <head>
     
-<title>Avis</title>
-<link rel="stylesheet">
+<title>page 1</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+    body {
+background-color: wheat;
+}
 
+
+
+header{
+background: rgba( 120, 196, 237 ,0.6);
+display: flex;
+justify-content: center;
+background-attachment: fixed;
+background-size: over;
+height: 200px;
+border: 2px solid black;
+border-radius: 10px;
+
+}
+
+
+
+/* responsive */
+    * {
+      box-sizing: border-box;
+    }
+    
+    input[type=text], select, textarea {
+      width: 100%;
+      padding: 12px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      resize: vertical;
+    }
+    
+    label {
+      padding: 12px 12px 12px 0;
+      display: inline-block;
+    }
+    
+    input[type=submit] {
+      background-color: #04AA6D;
+      color: white;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      float: right;
+    }
+    
+    input[type=submit]:hover {
+      background-color: #45a049;
+    }
+    
+    .container {
+      border-radius: 5px;
+      background-color: rgba(235, 95, 95, 0.817);
+      padding: 20px;
+      margin-left: 10%;
+      margin-right: 10%;
+      margin-top: 10px;
+      border: 2px solid black;
+
+    }
+    
+    img{
+        width: 100%;
+
+    }
+
+    .col-25 {
+      float: left;
+      width: 25%;
+      margin-top: 6px;
+
+    }
+    
+    .col-75 {
+      float: left;
+      width: 75%;
+      margin-top: 6px;
+      background-color: #04AA6D;
+    }
+    
+    
+    .row::after {
+      content: "";
+      display: table;
+      clear: both;
+    }
+    
+    
+    @media screen and (max-width: 600px) {
+      .col-25, .col-75, input[type=submit] {
+        width: 100%;
+        margin-top: 0;
+      }
+    }
+    
+</style>
 </head>
 
 
 <header>
 
-    <h1>Page acceuil</h1>
-         <label for="username">rechercher :</label><br>
+    <h1>Avis</h1>
+         <label for="username">rechercher un jeu :</label><br>
          <input type="text" id="username" name="username"><br>
+
+
+
 
 </header>
 
 <body>
 
+    <div class="container">
+        
+        <div class="row">
+          <div class="col-25">
+            <img src="bleue.png" alt="bleue">
+          </div>
+          <div class="col-75">
+            <div class="oui" >
+                <ul>
+                    <li>blalblabla</li>
+                    <li>blablalblab</li>
+                    <li>alblablalblabl</li>
+                </ul>
 
-<form action="/action_page.php">
+            </div>
+          </div>
+        </div>
+        
+
+      </div>
+      <div class="container">
+        
+        <div class="row">
+          <div class="col-25">
+            <img src="bleue.png" alt="bleue">
+          </div>
+          <div class="col-75">
+            <div class="oui" >
+                <ul>
+                    <li>blalblabla</li>
+                    <li>blablalblab</li>
+                    <li>alblablalblabl</li>
+                </ul>
+
+            </div>
+          </div>
+        </div>
+        
+
+      </div>
+
+      <div class="container">
+        
+        <div class="row">
+          <div class="col-25">
+            <img src="bleue.png" alt="bleue">
+          </div>
+          <div class="col-75">
+            <div class="oui" >
+                <ul>
+                    <li>blalblabla</li>
+                    <li>blablalblab</li>
+                    <li>alblablalblabl</li>
+                </ul>
+
+            </div>
+          </div>
+        </div>
+        
+
+      </div>
+
+      <div class="container">
+        
+        <div class="row">
+          <div class="col-25">
+            <img src="bleue.png" alt="bleue">
+          </div>
+          <div class="col-75">
+            <div class="oui" >
+                <ul>
+                    <li>blalblabla</li>
+                    <li>blablalblab</li>
+                    <li>alblablalblabl</li>
+                </ul>
+
+            </div>
+          </div>
+        </div>
+        
+
+      </div>
+
+      <div class="container">
+        
+        <div class="row">
+          <div class="col-25">
+            <img src="bleue.png" alt="bleue">
+          </div>
+          <div class="col-75">
+            <div class="oui" >
+                <ul>
+                    <li>blalblabla</li>
+                    <li>blablalblab</li>
+                    <li>alblablalblabl</li>
+                </ul>
+
+            </div>
+          </div>
+        </div>
+        
+
+      </div>
 
 
-  </form>
+      
+
 </body>
 
-<footer>
-    <p>
-        notes:    fait par Lucien, Arthur et Vadim
-    </p>
-
-
-</footer>
 
 </html>
