--- a/Notre Site/site_officiel/templates/result.html
+++ b/Notre Site/site_officiel/templates/result.html
@@ -128,8 +128,8 @@ border-radius: 10px;
           <div class="col-75">
             <div class="oui" >
                 <ul>
-                    <li>blalblabla</li>
-                    <li>blablalblab</li>
+                    <li>{{ username }}</li>
+                    <li> </li>
                     <li>alblablalblabl</li>
                 </ul>
 
