--- a/Notre Site/site_officiel/templates/result.html
+++ b/Notre Site/site_officiel/templates/result.html
@@ -230,9 +230,9 @@ border-radius: 10px;
           <div class="col-75">
             <div class="oui" >
                 <ul>
-                    <li>{{nom_Smash_bros}}</li>
-                    <li> Le jeu est sortie en {{date_Smash_bros}}</li>
-                    <li>{{note_Smash_bros}} / 10</li>
+                    <li>{{nom_SSBU}}</li>
+                    <li> Le jeu est sortie en {{date_SSBU}}</li>
+                    <li>{{note_SSBU}} / 10</li>
                 </ul>
 
             </div>
@@ -296,9 +296,9 @@ border-radius: 10px;
           <div class="col-75">
             <div class="oui" >
                 <ul>
-                    <li>{{nom_Super_mario_odyssey}}</li>
-                    <li> Le jeu est sortie en {{date_Super_mario_odyssey}}</li>
-                    <li>{{note_Super_mario_odyssey}} / 10</li>
+                    <li>{{nom_Super_Mario_Odyssey}}</li>
+                    <li> Le jeu est sortie en {{date_Super_Mario_Odyssey}}</li>
+                    <li>{{note_Super_Mario_Odyssey}} / 10</li>
                 </ul>
 
             </div>
