--- a/Notre Site/site_officiel/templates/formulaire.html
+++ b/Notre Site/site_officiel/templates/formulaire.html
@@ -171,7 +171,7 @@
               <option>Super Mario Odyssey</option>
               <option>Cyberpunk 2077</option>
             </select>
-            <input type = 'submit' value = 'submit'>
+            <input type = 'submit' value = 'submit' style="opacity: 0%;">
           </div>
         </div>
         <div class="row">
