--- a/Notre Site/site_officiel/templates/index.html
+++ b/Notre Site/site_officiel/templates/index.html
@@ -107,7 +107,7 @@
 </head>
 
 <header class="oui">
-        <img src="header.png" alt="header" class="logo">
+        <img src="{{url_for('static', filename='images/header.png')}}" alt="header" class="logo">
 </header> 
 
 <body>
