--- a/Notre Site/site_officiel/templates/result.html
+++ b/Notre Site/site_officiel/templates/result.html
@@ -121,7 +121,7 @@ border-radius: 10px;
         
         <div class="row">
           <div class="col-25">
-            <img src="bleue.png" alt="bleue">
+            <img src="{{url_for('static', filename='images/Minecraft-Logo.png')}}" alt="header" class="logo">
           </div>
           <div class="col-75">
             <div class="oui" >
@@ -141,7 +141,7 @@ border-radius: 10px;
         
         <div class="row">
           <div class="col-25">
-            <img src="bleue.png" alt="bleue">
+            <img src="{{url_for('static', filename='images/valorant.png')}}" alt="header" class="logo">
           </div>
           <div class="col-75">
             <div class="oui" >
@@ -162,7 +162,7 @@ border-radius: 10px;
         
         <div class="row" >
           <div class="col-25">
-            <img src="bleue.png" alt="bleue">
+            <img src="{{url_for('static', filename='images/Apex-Legends-Logo-2019.png')}}" alt="header" class="logo">
           </div>
           <div class="col-75">
             <div class="oui" >
@@ -183,7 +183,7 @@ border-radius: 10px;
         
         <div class="row">
           <div class="col-25">
-            <img src="bleue.png" alt="bleue">
+            <img src="{{url_for('static', filename='images/roblox.png')}}" alt="header" class="logo">
           </div>
           <div class="col-75">
             <div class="oui" >
@@ -204,7 +204,7 @@ border-radius: 10px;
         
         <div class="row">
           <div class="col-25">
-            <img src="bleue.png" alt="bleue">
+            <img src="{{url_for('static', filename='images/csgo.png')}}" alt="header" class="logo">
           </div>
           <div class="col-75">
             <div class="oui" >
@@ -225,14 +225,14 @@ border-radius: 10px;
         
         <div class="row">
           <div class="col-25">
-            <img src="bleue.png" alt="bleue">
+            <img src="{{url_for('static', filename='images/Super_Smash_Bros._Ultimate_Logo.png')}}" alt="header" class="logo">
           </div>
           <div class="col-75">
             <div class="oui" >
                 <ul>
-                    <li>{{nom_SSBU}}</li>
-                    <li> Le jeu est sortie en {{date_SSBU}}</li>
-                    <li>{{note_SSBU}} / 10</li>
+                    <li>{{nom_Smash_bros}}</li>
+                    <li> Le jeu est sortie en {{date_Smash_bros}}</li>
+                    <li>{{note_Smash_bros}} / 10</li>
                 </ul>
 
             </div>
@@ -246,7 +246,7 @@ border-radius: 10px;
         
         <div class="row">
           <div class="col-25">
-            <img src="bleue.png" alt="bleue">
+            <img src="{{url_for('static', filename='images/gta.png')}}" alt="header" class="logo">
           </div>
           <div class="col-75">
             <div class="oui" >
@@ -269,7 +269,7 @@ border-radius: 10px;
         
         <div class="row">
           <div class="col-25">
-            <img src="bleue.png" alt="bleue">
+            <img src="{{url_for('static', filename='images/fornite.png')}}" alt="header" class="logo">
           </div>
           <div class="col-75">
             <div class="oui" >
@@ -291,14 +291,14 @@ border-radius: 10px;
         
         <div class="row">
           <div class="col-25">
-            <img src="bleue.png" alt="bleue">
+            <img src="{{url_for('static', filename='images/supermario.jpg')}}" alt="header" class="logo">
           </div>
           <div class="col-75">
             <div class="oui" >
                 <ul>
-                    <li>{{nom_Super_Mario_Odyssey}}</li>
-                    <li> Le jeu est sortie en {{date_Super_Mario_Odyssey}}</li>
-                    <li>{{note_Super_Mario_Odyssey}} / 10</li>
+                    <li>{{nom_Super_mario_odyssey}}</li>
+                    <li> Le jeu est sortie en {{date_Super_mario_odyssey}}</li>
+                    <li>{{note_Super_mario_odyssey}} / 10</li>
                 </ul>
 
             </div>
@@ -313,7 +313,7 @@ border-radius: 10px;
         
         <div class="row">
           <div class="col-25">
-            <img src="bleue.png" alt="bleue">
+            <img src="{{url_for('static', filename='images/téléchargé.png')}}" alt="header" class="logo">
           </div>
           <div class="col-75">
             <div class="oui" >
