--- a/Notre Site/site_officiel/templates/result.html
+++ b/Notre Site/site_officiel/templates/result.html
@@ -129,6 +129,7 @@ border-radius: 10px;
                     <li>{{nom_minecraft}}</li>
                     <li> Le jeu est sortie en {{date_minecraft}}</li>
                     <li>{{note_minecraft}} / 10</li>
+                    <li>Avis général : {{ avis_minecraft }}</li>
                 </ul>
 
             </div>
@@ -149,6 +150,7 @@ border-radius: 10px;
                     <li>{{nom_Valorant}}</li>
                     <li> Le jeu est sortie en {{date_Valorant}}</li>
                     <li>{{note_Valorant}} / 10</li>
+                    <li>Avis général : {{ avis_Valorant }}</li>
                 </ul>
 
             </div>
@@ -170,6 +172,7 @@ border-radius: 10px;
                     <li>{{nom_Apex}}</li>
                     <li> Le jeu est sortie en {{date_Apex}}</li>
                     <li>{{note_Apex}} / 10</li>
+                    <li>Avis général : {{ avis_Apex }}</li>
                 </ul>
 
             </div>
@@ -191,6 +194,7 @@ border-radius: 10px;
                     <li>{{nom_Roblox}}</li>
                     <li> Le jeu est sortie en {{date_Roblox}}</li>
                     <li>{{note_Roblox}} / 10</li>
+                    <li>Avis général : {{ avis_Roblox }}</li>
                 </ul>
 
             </div>
@@ -212,6 +216,7 @@ border-radius: 10px;
                     <li>{{nom_CSGO}}</li>
                     <li> Le jeu est sortie en {{date_CSGO}}</li>
                     <li>{{note_CSGO}} / 10</li>
+                    <li>Avis général : {{ avis_CSGO }}</li>
                 </ul>
 
             </div>
@@ -233,6 +238,7 @@ border-radius: 10px;
                     <li>{{nom_SSBU}}</li>
                     <li> Le jeu est sortie en {{date_SSBU}}</li>
                     <li>{{note_SSBU}} / 10</li>
+                    <li>Avis général : {{ avis_SSBU }}</li>
                 </ul>
 
             </div>
@@ -254,6 +260,7 @@ border-radius: 10px;
                     <li>{{nom_GTAV}}</li>
                     <li> Le jeu est sortie en {{date_GTAV}}</li>
                     <li>{{note_GTAV}} / 10</li>
+                    <li>Avis général : {{ avis_GTAV }}</li>
                 </ul>
 
             </div>
@@ -277,6 +284,7 @@ border-radius: 10px;
                     <li>{{nom_Fortnite}}</li>
                     <li> Le jeu est sortie en {{date_Fortnite}}</li>
                     <li>{{note_Fortnite}} / 10</li>
+                    <li>Avis général : {{ avis_Fortnite }}</li>
                 </ul>
 
             </div>
@@ -299,6 +307,7 @@ border-radius: 10px;
                     <li>{{nom_Super_Mario_Odyssey}}</li>
                     <li> Le jeu est sortie en {{date_Super_Mario_Odyssey}}</li>
                     <li>{{note_Super_Mario_Odyssey}} / 10</li>
+                    <li>Avis général : {{ avis_Super_Mario_Odyssey }}</li>
                 </ul>
 
             </div>
@@ -321,6 +330,7 @@ border-radius: 10px;
                     <li>{{nom_Cyberpunk}}</li>
                     <li> Le jeu est sortie en {{date_Cyberpunk}}</li>
                     <li>{{note_Cyberpunk}} / 10</li>
+                    <li>Avis général : {{ avis_Cyberpunk }}</li>
                 </ul>
 
             </div>
