--- a/Notre Site/site_officiel/templates/index.html
+++ b/Notre Site/site_officiel/templates/index.html
@@ -202,7 +202,7 @@
             <label for="subject">Commentaire</label>
           </div>
           <div class="col-75">
-            <textarea id="subject" name="subject" placeholder="Mettre un commentaire..." style="height:200px"></textarea>
+            <textarea id="subject" name="avis" placeholder="Mettre un commentaire..." style="height:200px"></textarea>
           </div>
         </div>
         <br>
