--- a/Notre Site/site_officiel_après_Lundi/templates/result_recherche.html
+++ b/Notre Site/site_officiel_après_Lundi/templates/result_recherche.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section>
-        <p>EH OH COUCOU COPAIN {{recherche}}</p>
+        <p>EH OH COUCOU COPAIN {{le_jeux}}</p>
     </section>
 </body>
 </html>
