--- a/Notre Site/site_officiel_après_Lundi/templates/recherche.html
+++ b/Notre Site/site_officiel_après_Lundi/templates/recherche.html
@@ -8,8 +8,19 @@
 </head>
 <body>
     <form action="{{url_for('result_recherche')}}" method="POST">
-        <input type="text" placeholder="cherchez ici svp" name="recherche">
-        <input type="submit" value="submit">
+        <select name="game">
+            <option>Minecraft</option>
+            <option>Valorant</option>
+            <option>Apex</option>
+            <option>Roblox</option>
+            <option>CS:GO</option>
+            <option>Super Smash Bros Ultimate</option>
+            <option>GTA 5</option>
+            <option>Fortnite</option>
+            <option>Super Mario Odyssey</option>
+            <option>Cyberpunk 2077</option>
+        </select>
+        <input type="submit" value="Valider">
     </form>
 </body>
 </html>
