--- a/Notre Site/site_officiel_après_Lundi/templates/recherche.html
+++ b/Notre Site/site_officiel_après_Lundi/templates/recherche.html
@@ -5,6 +5,95 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recherche</title>
+
+    <style>
+
+        body{
+            background-color: antiquewhite;
+        }
+
+        /* responsive */
+    * {
+      box-sizing: border-box;
+      
+    }
+    
+    input[type=text], select, textarea {
+      width: 100%;
+      padding: 12px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      resize: vertical;
+    }
+    
+    label {
+      padding: 12px 12px 12px 0;
+      display: inline-block;
+    }
+    
+    input[type=submit] {
+      background-color: #04AA6D;
+      color: white;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      float: right;
+    }
+    
+    input[type=submit]:hover {
+      background-color: #45a049;
+    }
+    
+    .container {
+      border-radius: 5px;
+      background-color: rgba(235, 95, 95, 0.817);
+      padding: 20px;
+      margin-left: 10%;
+      margin-right: 10%;
+      margin-top: 10px;
+      border: 2px solid black;
+
+    }
+    
+    img{
+        width: 100%;
+
+    }
+
+    .col-25 {
+      float: left;
+      width: 40%;
+      margin-top: 6px;
+
+    }
+    
+    .col-75 {
+      float: left;
+      width: 60%;
+      margin-top: 6px;
+      background-color: rgba(194, 181, 255, 0.616);
+      border-radius: 10px;
+        
+    }
+    
+    
+    .row::after {
+      content: "";
+      display: table;
+      clear: both;
+    }
+    
+    
+    @media screen and (max-width: 600px) {
+      .col-25, .col-75, input[type=submit] {
+        width: 100%;
+        margin-top: 0;
+      }
+    }
+    </style>
+
+
 </head>
 <body>
     <form action="{{url_for('recherche')}}" method="POST">
@@ -31,8 +120,18 @@
     {% if profils %}
     {% for i in range(0, len_profils)%}
 
-        <p>{{profils[i][0]}} à mis {{profils[i][1]}}</p>
-        <p>Commentaire : {{profils[i][2]}}
+    <div class="container">
+        <div class="row-30%">
+            <h1 style="font-size: 25px;">{{profils[i][0]}} : {{profils[i][1]}} /10</h1>
+        </div>
+        <div class="row-70%">
+            <p>
+                {{profils[i][2]}}
+            </p>
+
+
+        </div>
+    </div>
 
     {% endfor %}
     {% endif %}
