--- a/Notre Site/site_officiel_après_Lundi/templates/recherche.html
+++ b/Notre Site/site_officiel_après_Lundi/templates/recherche.html
@@ -118,15 +118,15 @@
     {% endif %}
     
     {% if profils %}
-    {% for i in range(0, len_profils)%}
+    {% for i in range(1, len_profils + 1)%}
 
     <div class="container">
         <div class="row-30%">
-            <h1 style="font-size: 25px;">{{profils[i][0]}} : {{profils[i][1]}} /10</h1>
+            <h1 style="font-size: 25px;">{{profils[-i][0]}} : {{profils[-i][1]}} /10</h1>
         </div>
         <div class="row-70%">
             <p>
-                {{profils[i][2]}}
+                {{profils[-i][2]}}
             </p>
 
 
