--- a/Notre Site/site_officiel_après_Lundi/templates/result.html
+++ b/Notre Site/site_officiel_après_Lundi/templates/result.html
@@ -111,6 +111,9 @@ border-radius: 10px;
 <header>
 
     <h1 style="padding-top:20px ;">Avis des jeux ainsi que leurs notes</h1>
+    <a href="{{url_for('formulaire')}}"> 
+        <input type="submit" value="Valider">
+    </a>
 
 
 </header>
