--- a/Notre Site/site_officiel_après_Lundi/templates/result.html
+++ b/Notre Site/site_officiel_après_Lundi/templates/result.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     
-<title>Résultats</title>
+<title>page 1</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
     body {
@@ -111,9 +111,6 @@ border-radius: 10px;
 <header>
 
     <h1 style="padding-top:20px ;">Avis des jeux ainsi que leurs notes</h1>
-    <a href="{{url_for('formulaire')}}"> 
-        <input type="submit" value="Valider">
-    </a>
 
 
 </header>
@@ -124,7 +121,8 @@ border-radius: 10px;
         
         <div class="row">
           <div class="col-25">
-            <img src="{{url_for('static', filename='images/Minecraft-Logo.png')}}" alt="header" class="logo">
+            <a href="{{url_for('recherche')}}">
+            <img src="{{url_for('static', filename='images/valorant.png')}}" alt="header" class="logo"></a>
           </div>
           <div class="col-75">
             <div class="oui" >
@@ -132,7 +130,6 @@ border-radius: 10px;
                     <li>{{nom_minecraft}}</li>
                     <li> Le jeu est sortie en {{date_minecraft}}</li>
                     <li>{{note_minecraft}} / 10</li>
-                    <li>Avis général : {{ avis_minecraft }}</li>
                 </ul>
 
             </div>
@@ -145,7 +142,8 @@ border-radius: 10px;
         
         <div class="row">
           <div class="col-25">
-            <img src="{{url_for('static', filename='images/valorant.png')}}" alt="header" class="logo">
+            <a href="{{url_for('recherche')}}">
+            <img src="{{url_for('static', filename='images/valorant.png')}}" alt="header" class="logo"></a>
           </div>
           <div class="col-75">
             <div class="oui" >
@@ -153,7 +151,6 @@ border-radius: 10px;
                     <li>{{nom_Valorant}}</li>
                     <li> Le jeu est sortie en {{date_Valorant}}</li>
                     <li>{{note_Valorant}} / 10</li>
-                    <li>Avis général : {{ avis_Valorant }}</li>
                 </ul>
 
             </div>
@@ -167,7 +164,8 @@ border-radius: 10px;
         
         <div class="row" >
           <div class="col-25">
-            <img src="{{url_for('static', filename='images/Apex-Legends-Logo-2019.png')}}" alt="header" class="logo">
+            <a href="{{url_for('recherche')}}">
+            <img src="{{url_for('static', filename='images/Apex-Legends-Logo-2019.png')}}" alt="header" class="logo"></a>
           </div>
           <div class="col-75">
             <div class="oui" >
@@ -175,7 +173,6 @@ border-radius: 10px;
                     <li>{{nom_Apex}}</li>
                     <li> Le jeu est sortie en {{date_Apex}}</li>
                     <li>{{note_Apex}} / 10</li>
-                    <li>Avis général : {{ avis_Apex }}</li>
                 </ul>
 
             </div>
@@ -189,7 +186,8 @@ border-radius: 10px;
         
         <div class="row">
           <div class="col-25">
-            <img src="{{url_for('static', filename='images/roblox.png')}}" alt="header" class="logo">
+            <a href="{{url_for('recherche')}}">
+            <img src="{{url_for('static', filename='images/roblox.png')}}" alt="header" class="logo"></a>
           </div>
           <div class="col-75">
             <div class="oui" >
@@ -197,7 +195,6 @@ border-radius: 10px;
                     <li>{{nom_Roblox}}</li>
                     <li> Le jeu est sortie en {{date_Roblox}}</li>
                     <li>{{note_Roblox}} / 10</li>
-                    <li>Avis général : {{ avis_Roblox }}</li>
                 </ul>
 
             </div>
@@ -211,7 +208,8 @@ border-radius: 10px;
         
         <div class="row">
           <div class="col-25">
-            <img src="{{url_for('static', filename='images/csgo.png')}}" alt="header" class="logo">
+            <a href="{{url_for('recherche')}}">
+            <img src="{{url_for('static', filename='images/csgo.png')}}" alt="header" class="logo"></a>
           </div>
           <div class="col-75">
             <div class="oui" >
@@ -219,7 +217,6 @@ border-radius: 10px;
                     <li>{{nom_CSGO}}</li>
                     <li> Le jeu est sortie en {{date_CSGO}}</li>
                     <li>{{note_CSGO}} / 10</li>
-                    <li>Avis général : {{ avis_CSGO }}</li>
                 </ul>
 
             </div>
@@ -233,15 +230,15 @@ border-radius: 10px;
         
         <div class="row">
           <div class="col-25">
-            <img src="{{url_for('static', filename='images/Super_Smash_Bros._Ultimate_Logo.png')}}" alt="header" class="logo">
+            <a href="{{url_for('recherche')}}">
+            <img src="{{url_for('static', filename='images/Super_Smash_Bros._Ultimate_Logo.png')}}" alt="header" class="logo"></a>
           </div>
           <div class="col-75">
             <div class="oui" >
                 <ul>
-                    <li>{{nom_SSBU}}</li>
-                    <li> Le jeu est sortie en {{date_SSBU}}</li>
-                    <li>{{note_SSBU}} / 10</li>
-                    <li>Avis général : {{ avis_SSBU }}</li>
+                    <li>{{nom_Smash_bros}}</li>
+                    <li> Le jeu est sortie en {{date_Smash_bros}}</li>
+                    <li>{{note_Smash_bros}} / 10</li>
                 </ul>
 
             </div>
@@ -255,7 +252,8 @@ border-radius: 10px;
         
         <div class="row">
           <div class="col-25">
-            <img src="{{url_for('static', filename='images/gta.png')}}" alt="header" class="logo">
+            <a href="{{url_for('recherche')}}">
+            <img src="{{url_for('static', filename='images/gta.png')}}" alt="header" class="logo"></a>
           </div>
           <div class="col-75">
             <div class="oui" >
@@ -263,7 +261,6 @@ border-radius: 10px;
                     <li>{{nom_GTAV}}</li>
                     <li> Le jeu est sortie en {{date_GTAV}}</li>
                     <li>{{note_GTAV}} / 10</li>
-                    <li>Avis général : {{ avis_GTAV }}</li>
                 </ul>
 
             </div>
@@ -279,7 +276,8 @@ border-radius: 10px;
         
         <div class="row">
           <div class="col-25">
-            <img src="{{url_for('static', filename='images/fornite.png')}}" alt="header" class="logo">
+            <a href="{{url_for('recherche')}}">
+            <img src="{{url_for('static', filename='images/fornite.png')}}" alt="header" class="logo"></a>
           </div>
           <div class="col-75">
             <div class="oui" >
@@ -287,7 +285,6 @@ border-radius: 10px;
                     <li>{{nom_Fortnite}}</li>
                     <li> Le jeu est sortie en {{date_Fortnite}}</li>
                     <li>{{note_Fortnite}} / 10</li>
-                    <li>Avis général : {{ avis_Fortnite }}</li>
                 </ul>
 
             </div>
@@ -302,15 +299,18 @@ border-radius: 10px;
         
         <div class="row">
           <div class="col-25">
-            <img src="{{url_for('static', filename='images/supermario.jpg')}}" alt="header" class="logo">
+            <form action="">
+            <a href="{{url_for('recherche')}}">
+            <img src="{{url_for('static', filename='images/supermario.jpg')}}" alt="header" class="logo"><input type="text" value="Minecraft" name="game">
+          </a>
+        </form>
           </div>
           <div class="col-75">
             <div class="oui" >
                 <ul>
-                    <li>{{nom_Super_Mario_Odyssey}}</li>
-                    <li> Le jeu est sortie en {{date_Super_Mario_Odyssey}}</li>
-                    <li>{{note_Super_Mario_Odyssey}} / 10</li>
-                    <li>Avis général : {{ avis_Super_Mario_Odyssey }}</li>
+                    <li>{{nom_Super_mario_odyssey}}</li>
+                    <li> Le jeu est sortie en {{date_Super_mario_odyssey}}</li>
+                    <li>{{note_Super_mario_odyssey}} / 10</li>
                 </ul>
 
             </div>
@@ -325,7 +325,8 @@ border-radius: 10px;
         
         <div class="row">
           <div class="col-25">
-            <img src="{{url_for('static', filename='images/téléchargé.png')}}" alt="header" class="logo">
+            <a href="{{url_for('recherche')}}">
+            <img src="{{url_for('static', filename='images/téléchargé.png')}}" alt="header" class="logo"></a>
           </div>
           <div class="col-75">
             <div class="oui" >
@@ -333,7 +334,6 @@ border-radius: 10px;
                     <li>{{nom_Cyberpunk}}</li>
                     <li> Le jeu est sortie en {{date_Cyberpunk}}</li>
                     <li>{{note_Cyberpunk}} / 10</li>
-                    <li>Avis général : {{ avis_Cyberpunk }}</li>
                 </ul>
 
             </div>
