--- a/Notre Site/site_officiel_après_Lundi/templates/result.html
+++ b/Notre Site/site_officiel_après_Lundi/templates/result.html
@@ -122,7 +122,7 @@ border-radius: 10px;
         <div class="row">
           <div class="col-25">
             <a href="{{url_for('recherche')}}">
-            <img src="{{url_for('static', filename='images/valorant.png')}}" alt="header" class="logo"></a>
+            <img src="{{url_for('static', filename='images/Minecraft-Logo.png')}}" alt="header" class="logo"><input type="text" value="Minecraft" name="game"></a>
           </div>
           <div class="col-75">
             <div class="oui" >
@@ -301,7 +301,7 @@ border-radius: 10px;
           <div class="col-25">
             <form action="">
             <a href="{{url_for('recherche')}}">
-            <img src="{{url_for('static', filename='images/supermario.jpg')}}" alt="header" class="logo"><input type="text" value="Minecraft" name="game">
+            <img src="{{url_for('static', filename='images/supermario.jpg')}}" alt="header" class="logo">
           </a>
         </form>
           </div>
